Modified git ignore, added validation_tr and validation_te to preprocessing script,Added new loss to custom VAE, added validation_te to the dataset class

--- a/Data/preprocessing_script.ipynb
+++ b/Data/preprocessing_script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,18 +24,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_table('./LFM-2b.tsv',nrows=50000000, header=None,names=['user_id','country','age','sex','track_name','artist','timestamp'],dtype=column_types,parse_dates = ['timestamp'],on_bad_lines='skip')"
+    "df = pd.read_table('/data/LFM-2b.tsv',nrows=50000000, header=None,names=['user_id','country','age','sex','track_name','artist','timestamp'],dtype=column_types,parse_dates = ['timestamp'],on_bad_lines='skip')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mduzah/anaconda3/envs/thesis/lib/python3.11/site-packages/sklearn/utils/validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "/home/mduzah/anaconda3/envs/thesis/lib/python3.11/site-packages/sklearn/utils/validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n",
+      "/home/mduzah/anaconda3/envs/thesis/lib/python3.11/site-packages/sklearn/utils/validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "/home/mduzah/anaconda3/envs/thesis/lib/python3.11/site-packages/sklearn/utils/validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n"
+     ]
+    }
+   ],
    "source": [
     "df = (\n",
     "    df.groupby([\"user_id\", \"track_name\", \"artist\"], as_index=False)\n",
@@ -101,8 +116,11 @@
     "# Split the DataFrame into train (80%), test (10%), and validation (10%) sets\n",
     "train_df, temp_df = train_test_split(pivot_df, test_size=0.2, random_state=42)\n",
     "valid_df, test_df = train_test_split(temp_df, test_size=0.5, random_state=42)\n",
+    "# 50% validation traina nd 50% validation test split\n",
+    "valid_df_tr,valid_df_te =train_test_split(valid_df, test_size=0.5, random_state=42)\n",
     "train_df.to_csv(\"user_interactions_train.csv\")\n",
-    "valid_df.to_csv(\"user_interactions_validation.csv\")\n",
+    "valid_df_tr.to_csv(\"user_interactions_validation_tr.csv\")\n",
+    "valid_df_te.to_csv(\"user_interactions_validation_te.csv\")\n",
     "test_df.to_csv(\"user_interactions_test.csv\")\n"
    ]
   },
@@ -117,12 +135,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(133, 45759) (133, 45759)\n"
+     ]
+    }
+   ],
    "source": [
-    "print(result_df.shape,train_df.shape,valid_df.shape)\n",
-    "\n"
+    "print(valid_df_tr.shape,valid_df_te.shape)\n"
    ]
   }
  ],
