Added test_tr and test_te dataframes to preprocesing script, added initialized trainer to run test script to load and test model checkpoint

--- a/implementation_temp.ipynb
+++ b/implementation_temp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,6 +78,8 @@
     "        self.train_data = pd.read_csv(root+'user_interactions_train.csv')\n",
     "        self.vad_data_tr = pd.read_csv(root+'user_interactions_validation_tr.csv')\n",
     "        self.vad_data_te = pd.read_csv(root+'user_interactions_validation_te.csv')\n",
+    "        self.test_data_tr = pd.read_csv(root+'user_interactions_test_tr.csv')\n",
+    "        self.test_data_te = pd.read_csv(root+'user_interactions_test_te.csv')\n",
     "\n",
     "\n",
     "        unique_sid = item_mapper['song_id'].unique()\n",
@@ -110,8 +112,8 @@
     "            # data_tr, data_te = self.vad_data_tr.iloc[index].drop('user_id').to_numpy(dtype='float32'), np.zeros(1)\n",
     "            idx_user = self.vad_data_tr.at[index, 'user_id']\n",
     "        elif self.split == \"test\":\n",
-    "            data_tr, data_te = self.test_data_tr[index], self.test_data_te[index]\n",
-    "            idx_user = self.te_idx[index]\n",
+    "            data_tr, data_te = self.test_data_tr.iloc[index].drop('user_id').to_numpy(dtype='float32'), self.test_data_te.iloc[index].drop('user_id').to_numpy(dtype='float32')\n",
+    "            idx_user = self.test_data_tr.at[index, 'user_id']\n",
     "\n",
     "\n",
     "        \n",
@@ -124,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +543,7 @@
     "                        dict_out[\"recommended_terms\"] = \" \".join(\n",
     "                            [str(x) for x in list(np.argsort(-preds)[:k])]\n",
     "                        )\n",
-    "                        dict_out[\"new_userId\"] = int(\n",
+    "                        dict_out[\"user_id\"] = int(\n",
     "                            uindex[user].cpu().detach().numpy()\n",
     "                        )\n",
     "                        dict_out[\"scores\"] = \" \".join(\n",
@@ -661,8 +663,8 @@
     "        else:\n",
     "            final_results = pd.DataFrame(result)\n",
     "            final_results = final_results.merge(\n",
-    "                self.user_mapper[[\"new_userId\", \"gender\", \"country\", \"age\"]],\n",
-    "                on=\"new_userId\",\n",
+    "                self.user_mapper[[\"user_id\", \"sex\", \"country\", \"age\"]],\n",
+    "                on=\"user_id\",\n",
     "                how=\"inner\",\n",
     "            )\n",
     "            final_results.to_csv(\n",
@@ -762,9 +764,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.backends.cudnn.version: 8902\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "cuda = torch.cuda.is_available()\n",
@@ -779,16 +789,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cuda"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,9 +860,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'optim' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/mduzah/Thesis_work/thesis/implementation_temp.ipynb Cell 14\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Buzairahmd.rd.tuni.fi/home/mduzah/Thesis_work/thesis/implementation_temp.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# lr_policy: step\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Buzairahmd.rd.tuni.fi/home/mduzah/Thesis_work/thesis/implementation_temp.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m last_epoch \u001b[39m=\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Buzairahmd.rd.tuni.fi/home/mduzah/Thesis_work/thesis/implementation_temp.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m lr_scheduler \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39moptim\u001b[39m.\u001b[39mlr_scheduler\u001b[39m.\u001b[39mMultiStepLR(\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Buzairahmd.rd.tuni.fi/home/mduzah/Thesis_work/thesis/implementation_temp.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m     optim, milestones\u001b[39m=\u001b[39m[\u001b[39m50\u001b[39m, \u001b[39m75\u001b[39m], gamma\u001b[39m=\u001b[39mcfg[\u001b[39m\"\u001b[39m\u001b[39mgamma\u001b[39m\u001b[39m\"\u001b[39m], last_epoch\u001b[39m=\u001b[39mlast_epoch\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Buzairahmd.rd.tuni.fi/home/mduzah/Thesis_work/thesis/implementation_temp.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m )\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'optim' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# lr_policy: step\n",
     "last_epoch = -1\n",
@@ -883,6 +916,123 @@
     "    target=[\"country_encoded\"],\n",
     ")\n",
     "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test = DS(\n",
+    "    \"./Data/\",\n",
+    "    item_mapper,\n",
+    "    user_mapper,\n",
+    "    target=[\"country_encoded\"],\n",
+    "    split=\"test\",\n",
+    ")\n",
+    "test_loader = torch.utils.data.DataLoader(\n",
+    "    df_test,\n",
+    "    batch_size=100,\n",
+    "    shuffle=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = MultiVAE(\n",
+    "    dropout_p=0.5,\n",
+    "    weight_decay=0.0,\n",
+    "    cuda2=cuda,\n",
+    "    q_dims=[item_mapper.shape[0], 2000, 200],\n",
+    "    p_dims=[200, 2000, item_mapper.shape[0]],\n",
+    "    n_conditioned=0,\n",
+    "    n_sensitive_attributes=1,  # only country for now\n",
+    ")\n",
+    "# 3. optimizer\n",
+    "optim = torch.optim.Adam(\n",
+    "    [\n",
+    "        {\n",
+    "            \"params\": list(utils.get_parameters(model, bias=False)),\n",
+    "            \"weight_decay\": 0.0,\n",
+    "        },\n",
+    "        {\n",
+    "            \"params\": list(utils.get_parameters(model, bias=True)),\n",
+    "            \"weight_decay\": 0.0,\n",
+    "        },\n",
+    "    ],\n",
+    "    lr=cfg[\"lr\"],\n",
+    ")\n",
+    "if cuda:\n",
+    "    model = model.cuda()\n",
+    "\n",
+    "checkpoint = torch.load(\n",
+    "    \"checkpoint/{}_vae_{}_{}_{}_{}.pth\".format(\n",
+    "        \"lfm2b\", [\"country_encoded\"], 0.5, 0.5, 0.5\n",
+    "    )\n",
+    ")\n",
+    "model.load_state_dict(checkpoint[\"model_state_dict\"])\n",
+    "optim.load_state_dict(checkpoint[\"optimizer_state_dict\"])\n",
+    "epoch = checkpoint[\"epoch\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "last_epoch = -1\n",
+    "lr_scheduler = torch.optim.lr_scheduler.MultiStepLR(\n",
+    "    optim, milestones=[50, 75], gamma=cfg[\"gamma\"], last_epoch=last_epoch\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "trainer = Trainer(\n",
+    "    cmd=\"test\",\n",
+    "    cuda=cuda,\n",
+    "    model=model,\n",
+    "    optim=optim,\n",
+    "    gamma=0.5,\n",
+    "    tau=0.5,\n",
+    "    lr_scheduler=lr_scheduler,\n",
+    "    train_loader=train_loader,\n",
+    "    valid_loader=valid_loader,\n",
+    "    test_loader=test_loader,\n",
+    "    start_step=0,\n",
+    "    total_steps=int(3e5),\n",
+    "    interval_validate=None,\n",
+    "    checkpoint_dir=\"./checkpoint/\",\n",
+    "    print_freq=1,\n",
+    "    checkpoint_freq=1,\n",
+    "    total_anneal_steps=2000,\n",
+    "    beta=0.5,\n",
+    "    item_mapper=item_mapper,\n",
+    "    user_mapper=user_mapper,\n",
+    "    dataset_name=\"lfm2b\",\n",
+    "    # alpha=0.5,\n",
+    "    base_dir=\"./Data/\",\n",
+    "    target=[\"country_encoded\"],\n",
+    ")\n",
+    "trainer.test()"
    ]
   }
  ],
