Made changes to preprocessing_script, added train_script to run on a detached screen on VM

--- a/implementation_temp.ipynb
+++ b/implementation_temp.ipynb
@@ -75,11 +75,19 @@
     "        out_data_dir = root\n",
     "        self.target=target\n",
     "        self.user_mapper = user_mapper\n",
-    "        self.train_data = pd.read_csv(root+'user_interactions_train.csv')\n",
-    "        self.vad_data_tr = pd.read_csv(root+'user_interactions_validation_tr.csv')\n",
-    "        self.vad_data_te = pd.read_csv(root+'user_interactions_validation_te.csv')\n",
-    "        self.test_data_tr = pd.read_csv(root+'user_interactions_test_tr.csv')\n",
-    "        self.test_data_te = pd.read_csv(root+'user_interactions_test_te.csv')\n",
+    "        if self.split == \"train\":\n",
+    "            self.train_data = pd.read_csv(root+'user_interactions_train.csv')\n",
+    "        elif self.split == \"valid\":\n",
+    "            self.vad_data_tr = pd.read_csv(root+'user_interactions_validation_tr.csv')\n",
+    "            self.vad_data_te = pd.read_csv(root+'user_interactions_validation_te.csv')\n",
+    "        elif self.split == \"test\":\n",
+    "            self.test_data_tr = pd.read_csv(root+'user_interactions_test_tr.csv')\n",
+    "            self.test_data_te = pd.read_csv(root+'user_interactions_test_te.csv')\n",
+    "        else:\n",
+    "            raise NotImplementedError\n",
+    "        \n",
+    "        \n",
+    "        \n",
     "\n",
     "\n",
     "        unique_sid = item_mapper['song_id'].unique()\n",
@@ -131,7 +139,7 @@
    "outputs": [],
    "source": [
     "item_mapper = pd.read_csv('./Data/items.csv')\n",
-    "user_mapper = pd.read_csv('./Data/users.csv')"
+    "user_mapper = pd.read_csv('./Data/users.csv')\n"
    ]
   },
   {
@@ -258,7 +266,7 @@
     "        return x\n",
     "\n",
     "class MultiVAE(nn.Module):\n",
-    "    def __init__(self, cuda2=True, weight_decay=0.0, dropout_p=0.5, q_dims=[20108, 600, 200], p_dims=[200, 600, 20108], n_conditioned=0, n_sensitive_attributes=1):\n",
+    "    def __init__(self, cuda2=True, weight_decay=0.0, dropout_p=0.5, q_dims=[20108, 600, 200], p_dims=[200, 600, 20108], n_conditioned=0, n_sensitive_attributes=1,n_classes=2):\n",
     "        super(MultiVAE, self).__init__()\n",
     "        self.cuda2 = cuda2\n",
     "        self.weight_decay = weight_decay\n",
@@ -271,7 +279,7 @@
     "        self.encoder = Encoder(None, dropout_p=dropout_p, q_dims=self.q_dims)\n",
     "        self.decoder = Decoder(None, p_dims=self.p_dims)\n",
     "\n",
-    "        self.sensitive_atr_vae = SENSITIVE_ATTR_VAE(n_sensitive_attributes=n_sensitive_attributes)\n",
+    "        self.classify = nn.Linear(200, n_classes, bias=True)\n",
     "\n",
     "    def forward(self, x, c):\n",
     "        x = f.normalize(x, p=2, dim=1)\n",
@@ -311,44 +319,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "DS = LFM1bDataset\n",
-    "dt = DS(\n",
-    "    './Data/',\n",
-    "    item_mapper,\n",
-    "    user_mapper,\n",
-    "    target=['country_encoded'],\n",
-    "    split=\"train\"\n",
-    ")\n",
+    "dt = DS(\"./Data/\", item_mapper, user_mapper, target=[\"country_encoded\"], split=\"train\")\n",
     "train_loader = torch.utils.data.DataLoader(\n",
-    "    dt, batch_size=500, shuffle=False,\n",
+    "    dt, batch_size=500, shuffle=False, num_workers=1\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "dt = DS(\n",
-    "'./Data/',\n",
-    "item_mapper,\n",
-    "user_mapper,\n",
-    "target=['country_encoded'],\n",
-    "split=\"valid\",\n",
+    "    \"./Data/\",\n",
+    "    item_mapper,\n",
+    "    user_mapper,\n",
+    "    target=[\"country_encoded\"],\n",
+    "    split=\"valid\",\n",
     ")\n",
     "valid_loader = torch.utils.data.DataLoader(\n",
-    "dt, batch_size=100, shuffle=False, \n",
+    "    dt, batch_size=100, shuffle=False, num_workers=1\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +474,7 @@
     "            if self.cuda:\n",
     "                data_tr = data_tr.cuda()\n",
     "                prof = prof.cuda()\n",
-    "                sens=sens.cuda()\n",
+    "                sens = sens.cuda()\n",
     "            data_tr = Variable(data_tr)\n",
     "            prof = Variable(prof)\n",
     "            data_time.update(time.time() - end)\n",
@@ -493,14 +495,17 @@
     "                )\n",
     "                eval_ubias += user_bias.item()\n",
     "\n",
-    "                \n",
-    "                ## SENSITIVE VAE ACCURACY \n",
-    "                y_hat, mean, log_var = self.model.sensitive_atr_vae(sampled_z)\n",
+    "                ## innner classifier loss\n",
+    "                y_hat = self.model.classify(sampled_z)\n",
     "                if self.cuda:\n",
-    "                    class_loss = loss_function(torch.flatten(Variable(sens.type(torch.FloatTensor))).cuda(), torch.flatten(y_hat), mean, log_var)\n",
+    "                    class_loss = self.criterion(\n",
+    "                        y_hat,\n",
+    "                        torch.flatten(Variable(sens.type(torch.LongTensor))).cuda(),\n",
+    "                    )\n",
     "                else:\n",
-    "                    class_loss = loss_function(torch.flatten(Variable(sens.type(torch.FloatTensor))), torch.flatten(y_hat), mean, log_var)\n",
-    "\n",
+    "                    class_loss = self.criterion(\n",
+    "                        y_hat, torch.flatten(Variable(sens.type(torch.LongTensor)))\n",
+    "                    )\n",
     "\n",
     "                eval_loss += class_loss.item()\n",
     "\n",
@@ -543,9 +548,7 @@
     "                        dict_out[\"recommended_terms\"] = \" \".join(\n",
     "                            [str(x) for x in list(np.argsort(-preds)[:k])]\n",
     "                        )\n",
-    "                        dict_out[\"user_id\"] = int(\n",
-    "                            uindex[user].cpu().detach().numpy()\n",
-    "                        )\n",
+    "                        dict_out[\"user_id\"] = int(uindex[user].cpu().detach().numpy())\n",
     "                        dict_out[\"scores\"] = \" \".join(\n",
     "                            [\n",
     "                                str(x)\n",
@@ -698,8 +701,8 @@
     "            if self.cuda:\n",
     "                data_tr = data_tr.cuda()\n",
     "                prof = prof.cuda()\n",
-    "                # added by me\n",
-    "                sens = sens.cuda()\n",
+    "                sens = sens.cuda()  # added by me\n",
+    "\n",
     "            data_tr = Variable(data_tr)\n",
     "            prof = Variable(prof)\n",
     "            data_time.update(time.time() - end)\n",
@@ -719,12 +722,16 @@
     "            else:\n",
     "                self.anneal = self.beta\n",
     "\n",
-    "            ## SENSITIVE VAE ACCURACY \n",
-    "            y_hat, mean, log_var = self.model.sensitive_atr_vae(sampled_z)\n",
+    "            ## CLASSIFICATION ACCURACY\n",
+    "            y_hat = self.model.classify(sampled_z)\n",
     "            if self.cuda:\n",
-    "                class_loss = loss_function(torch.flatten(Variable(sens.type(torch.FloatTensor))).cuda(), torch.flatten(y_hat), mean, log_var)\n",
+    "                class_loss = self.criterion(\n",
+    "                    y_hat, torch.flatten(Variable(sens.type(torch.LongTensor))).cuda()\n",
+    "                )\n",
     "            else:\n",
-    "                class_loss = loss_function(torch.flatten(Variable(sens.type(torch.FloatTensor))), torch.flatten(y_hat), mean, log_var)\n",
+    "                class_loss = self.criterion(\n",
+    "                    y_hat, torch.flatten(Variable(sens.type(torch.LongTensor)))\n",
+    "                )\n",
     "\n",
     "            # USER BIAS\n",
     "            user_bias = utils.calc_user_bias(\n",
@@ -764,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +805,7 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,6 +845,7 @@
     "    p_dims=[200, 2000, item_mapper.shape[0]],\n",
     "    n_conditioned=0,\n",
     "    n_sensitive_attributes=1, # only country for now\n",
+    "    n_classes=user_mapper['country'].nunique()\n",
     ")\n",
     "# 3. optimizer\n",
     "optim = torch.optim.Adam(\n",
@@ -860,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -924,6 +932,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "DS = LFM1bDataset\n",
+    "\n",
     "df_test = DS(\n",
     "    \"./Data/\",\n",
     "    item_mapper,\n",
@@ -940,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,6 +962,7 @@
     "    p_dims=[200, 2000, item_mapper.shape[0]],\n",
     "    n_conditioned=0,\n",
     "    n_sensitive_attributes=1,  # only country for now\n",
+    "    n_classes=user_mapper['country'].nunique()\n",
     ")\n",
     "# 3. optimizer\n",
     "optim = torch.optim.Adam(\n",
@@ -982,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1014,8 +1025,8 @@
     "    gamma=0.5,\n",
     "    tau=0.5,\n",
     "    lr_scheduler=lr_scheduler,\n",
-    "    train_loader=train_loader,\n",
-    "    valid_loader=valid_loader,\n",
+    "    train_loader=None,\n",
+    "    valid_loader=None,\n",
     "    test_loader=test_loader,\n",
     "    start_step=0,\n",
     "    total_steps=int(3e5),\n",
