Modified code for 2 sensitive variables, added more metrics to visualization code, modified train_script to run in background for 2 sensitive attrs training

--- a/implementation_temp.ipynb
+++ b/implementation_temp.ipynb
@@ -159,9 +159,6 @@
     "            label=sensitive,\n",
     "            class_list=self.class_list,\n",
     "        )\n",
-    "        print(\"\\nclass_list {}\".format(self.class_list))\n",
-    "        print(\"\\nuser sensitive attributes {}\".format(sensitive))\n",
-    "        print(\"\\nencoded class targets {}\".format(class_target))\n",
     "        return data_tr, data_te, prof, idx_user, class_target"
    ]
   },
@@ -410,7 +407,7 @@
     "    './Data/',\n",
     "    item_mapper,\n",
     "    user_mapper,\n",
-    "    target=['country'],\n",
+    "    target=['country',\"sex\"],\n",
     "    split=\"train\"\n",
     ")\n",
     "train_loader = torch.utils.data.DataLoader(\n",
@@ -428,7 +425,7 @@
     "'./Data/',\n",
     "item_mapper,\n",
     "user_mapper,\n",
-    "target=['country'],\n",
+    "target=['country','sex'],\n",
     "split=\"valid\",\n",
     ")\n",
     "valid_loader = torch.utils.data.DataLoader(\n",
@@ -916,7 +913,7 @@
     "    q_dims=[item_mapper.shape[0], 2000, 200],\n",
     "    p_dims=[200, 2000, item_mapper.shape[0]],\n",
     "    n_conditioned=0,\n",
-    "    sensitive_attributes=[\"country\"], # only country for now\n",
+    "    sensitive_attributes=[\"country\",\"sex\"], # only country and sex for now\n",
     ")\n",
     "# 3. optimizer\n",
     "optim = torch.optim.Adam(\n",
@@ -980,7 +977,7 @@
     "    dataset_name=\"lfm2b\",\n",
     "    # alpha=0.5,\n",
     "    base_dir=\"./Data/\",\n",
-    "    target=[\"country\"],\n",
+    "    target=[\"country\",\"sex\"],\n",
     ")\n",
     "trainer.train()"
    ]
@@ -996,7 +993,7 @@
     "    \"./Data/\",\n",
     "    item_mapper,\n",
     "    user_mapper,\n",
-    "    target=[\"country_encoded\"],\n",
+    "    target=[\"country\"],\n",
     "    split=\"test\",\n",
     ")\n",
     "test_loader = torch.utils.data.DataLoader(\n",
@@ -1019,7 +1016,7 @@
     "    q_dims=[item_mapper.shape[0], 2000, 200],\n",
     "    p_dims=[200, 2000, item_mapper.shape[0]],\n",
     "    n_conditioned=0,\n",
-    "    n_sensitive_attributes=1,  # only country for now\n",
+    "    sensitive_attributes=[\"country\"],  # only country for now\n",
     ")\n",
     "# 3. optimizer\n",
     "optim = torch.optim.Adam(\n",
@@ -1040,7 +1037,7 @@
     "\n",
     "checkpoint = torch.load(\n",
     "    \"checkpoint/{}_vae_{}_{}_{}_{}.pth\".format(\n",
-    "        \"lfm2b\", [\"country_encoded\"], 0.5, 0.5, 0.5\n",
+    "        \"lfm2b\", [\"country\"], 0.5, 0.5, 0.5\n",
     "    )\n",
     ")\n",
     "model.load_state_dict(checkpoint[\"model_state_dict\"])\n",
@@ -1090,7 +1087,7 @@
     "    dataset_name=\"lfm2b\",\n",
     "    # alpha=0.5,\n",
     "    base_dir=\"./Data/\",\n",
-    "    target=[\"country_encoded\"],\n",
+    "    target=[\"country\"],\n",
     ")\n",
     "trainer.test()"
    ]
