--- a/implementation_temp.ipynb
+++ b/implementation_temp.ipynb
@@ -993,7 +993,7 @@
     "    \"./Data/\",\n",
     "    item_mapper,\n",
     "    user_mapper,\n",
-    "    target=[\"country\"],\n",
+    "    target=[\"country\",\"sex\"],\n",
     "    split=\"test\",\n",
     ")\n",
     "test_loader = torch.utils.data.DataLoader(\n",
@@ -1016,7 +1016,7 @@
     "    q_dims=[item_mapper.shape[0], 2000, 200],\n",
     "    p_dims=[200, 2000, item_mapper.shape[0]],\n",
     "    n_conditioned=0,\n",
-    "    sensitive_attributes=[\"country\"],  # only country for now\n",
+    "    sensitive_attributes=[\"country\",\"sex\"],  # only country for now\n",
     ")\n",
     "# 3. optimizer\n",
     "optim = torch.optim.Adam(\n",
@@ -1037,7 +1037,7 @@
     "\n",
     "checkpoint = torch.load(\n",
     "    \"checkpoint/{}_vae_{}_{}_{}_{}.pth\".format(\n",
-    "        \"lfm2b\", [\"country\"], 0.5, 0.5, 0.5\n",
+    "        \"lfm2b\", [\"country\",\"sex\"], 0.5, 0.5, 0.5\n",
     "    )\n",
     ")\n",
     "model.load_state_dict(checkpoint[\"model_state_dict\"])\n",
@@ -1087,7 +1087,7 @@
     "    dataset_name=\"lfm2b\",\n",
     "    # alpha=0.5,\n",
     "    base_dir=\"./Data/\",\n",
-    "    target=[\"country\"],\n",
+    "    target=[\"country\",\"sex\"],\n",
     ")\n",
     "trainer.test()"
    ]
