Changes to preprocessing script to use less ram, changed directories in train script

--- a/Data/preprocessing_script.ipynb
+++ b/Data/preprocessing_script.ipynb
@@ -9,7 +9,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import LabelEncoder"
+    "from sklearn.preprocessing import LabelEncoder\n"
    ]
   },
   {
@@ -19,7 +19,15 @@
    "outputs": [],
    "source": [
     "columns=['user_id','country','age','sex','track_name','artist','timestamp']\n",
-    "column_types={'user_id':np.int32,'country':str,'age':np.int32,'sex':str,'track_name':str,'artist':str}"
+    "column_types = {\n",
+    "    \"user_id\": np.int32,\n",
+    "    \"country\": str,\n",
+    "    \"age\": np.int8,\n",
+    "    \"sex\": str,\n",
+    "    \"track_name\": str,\n",
+    "    \"artist\": str,\n",
+    "    \"timestamp\": str,\n",
+    "}"
    ]
   },
   {
@@ -28,7 +36,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_table('/data/LFM-2b.tsv',nrows=150000000, header=None,names=['user_id','country','age','sex','track_name','artist','timestamp'],dtype=column_types,parse_dates = ['timestamp'],on_bad_lines='skip')"
+    "df = pd.read_table(\n",
+    "    \"/data/LFM-2b.tsv\",\n",
+    "    nrows=750000000,\n",
+    "    header=None,\n",
+    "    names=[\"user_id\", \"country\", \"age\", \"sex\", \"track_name\", \"artist\", \"timestamp\"],\n",
+    "    dtype=column_types,\n",
+    "    on_bad_lines=\"skip\",\n",
+    ")\n"
    ]
   },
   {
@@ -84,7 +99,7 @@
     "user_data['country'] = user_data['country'].apply(lambda x: x if x in selected_countries else 'OTHER')\n",
     "\n",
     "user_data['country_encoded'] = country_encoder.fit_transform(user_data['country'])\n",
-    "user_data.to_csv('users.csv')\n",
+    "user_data.to_csv('/data/users.csv')\n",
     "\n",
     "\n",
     "df_grouped = df.groupby([\"track_name\", \"artist\"])[\"interactions\"].sum().reset_index()\n",
@@ -94,7 +109,7 @@
     "\n",
     "# Select only the desired columns\n",
     "result_df = df_grouped[[\"track_name\", \"artist\", \"song_id\"]]\n",
-    "result_df.to_csv(\"items.csv\",index=False)\n",
+    "result_df.to_csv(\"/data/items.csv\",index=False)\n",
     "\n",
     "\n",
     "# Merge the original DataFrame with the result_df on \"track_name\" and \"artist\" to get \"suid\"\n",
@@ -111,7 +126,7 @@
     "pivot_df=pivot_df.loc[~(pivot_df==0).all(axis=1)]\n",
     "# Split the DataFrame into train (80%), test (10%), and validation (10%) sets\n",
     "train_df, temp_df = train_test_split(pivot_df, test_size=0.2, random_state=42)\n",
-    "train_df.to_csv(\"user_interactions_train.csv\")\n",
+    "train_df.to_csv(\"/data/user_interactions_train.csv\")\n",
     "\n",
     "# 50% validation and 50% test split\n",
     "valid_df, test_df = train_test_split(temp_df, test_size=0.5, random_state=42)\n",
@@ -132,8 +147,8 @@
     "valid_df_tr = valid_df_tr.astype(float)\n",
     "\n",
     "\n",
-    "valid_df_tr.to_csv(\"user_interactions_validation_tr.csv\")\n",
-    "valid_df_te.to_csv(\"user_interactions_validation_te.csv\")\n",
+    "valid_df_tr.to_csv(\"/data/user_interactions_validation_tr.csv\")\n",
+    "valid_df_te.to_csv(\"/data/user_interactions_validation_te.csv\")\n",
     "\n",
     "\n",
     "# Create two new DataFrames with the same structure as the original\n",
@@ -153,8 +168,105 @@
     "\n",
     "\n",
     "\n",
-    "test_df_tr.to_csv(\"user_interactions_test_tr.csv\")\n",
-    "test_df_te.to_csv(\"user_interactions_test_te.csv\")\n"
+    "test_df_tr.to_csv(\"/data/user_interactions_test_tr.csv\")\n",
+    "test_df_te.to_csv(\"/data/user_interactions_test_te.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = (\n",
+    "    df.groupby([\"user_id\", \"track_name\", \"artist\"], as_index=False)\n",
+    "    .agg({\"timestamp\": \"count\", \"country\": \"first\", \"sex\": \"first\", \"age\": \"first\"})\n",
+    "    .rename(columns={\"timestamp\": \"interactions\"})\n",
+    ")\n",
+    "# Define a list of valid countries, valid sexes, and a valid age range\n",
+    "valid_sexes = [\"m\", \"f\",\"n\"]  # Replace with your valid sexes\n",
+    "valid_age_range = (0, 80)  # Replace with your valid age range\n",
+    "valid_rows = df[\"sex\"].isin(valid_sexes) & df[\"age\"].between(\n",
+    "    valid_age_range[0], valid_age_range[1]\n",
+    ")\n",
+    "df = df[valid_rows]\n",
+    "\n",
+    "df[\"country\"].replace(\"\", np.nan, inplace=True)\n",
+    "df.dropna(subset=[\"country\"], inplace=True)\n",
+    "\n",
+    "track_artist_counts = df.groupby([\"track_name\", \"artist\"])[\"interactions\"].transform(\"sum\")\n",
+    "\n",
+    "df = df[track_artist_counts >= 100]\n",
+    "\n",
+    "user_id_counts = df.groupby(\"user_id\")[\"interactions\"].transform(\"sum\")\n",
+    "df = df[user_id_counts >= 10]\n",
+    "\n",
+    "df.drop_duplicates(subset=[\"user_id\", \"track_name\", \"artist\", \"country\", \"age\", \"sex\"], inplace=True)\n",
+    "\n",
+    "user_data = df[[\"user_id\", \"age\", \"sex\", \"country\"]].drop_duplicates().set_index('user_id')\n",
+    "\n",
+    "sex_encoder = LabelEncoder()\n",
+    "country_encoder = LabelEncoder()\n",
+    "\n",
+    "user_data['sex_encoded'] = sex_encoder.fit_transform(user_data['sex'])\n",
+    "\n",
+    "country_counts = user_data['country'].value_counts()\n",
+    "selected_countries = country_counts[country_counts > 500].index.tolist()\n",
+    "\n",
+    "user_data['country'] = user_data['country'].apply(lambda x: x if x in selected_countries else 'OTHER')\n",
+    "\n",
+    "user_data['country_encoded'] = country_encoder.fit_transform(user_data['country'])\n",
+    "user_data.to_csv('/data/users.csv')\n",
+    "del user_data\n",
+    "\n",
+    "df_grouped = df.groupby([\"track_name\", \"artist\"])[\"interactions\"].sum().reset_index()\n",
+    "df_grouped[\"song_id\"] = df_grouped.index\n",
+    "result_df = df_grouped[[\"track_name\", \"artist\", \"song_id\"]]\n",
+    "result_df.to_csv(\"/data/items.csv\", index=False)\n",
+    "\n",
+    "merged_df = df.merge(result_df, on=[\"track_name\", \"artist\"])\n",
+    "\n",
+    "del result_df\n",
+    "del df\n",
+    "\n",
+    "pivot_df = merged_df.pivot(index='user_id', columns='song_id', values='interactions')\n",
+    "del merged_df\n",
+    "pivot_df.fillna(0,inplace=True)\n",
+    "\n",
+    "pivot_df = pivot_df.loc[~(pivot_df == 0).all(axis=1)]\n",
+    "\n",
+    "train_df, temp_df = train_test_split(pivot_df, test_size=0.2, random_state=42)\n",
+    "del pivot_df\n",
+    "train_df.to_csv(\"/data/user_interactions_train.csv\")\n",
+    "del train_df\n",
+    "valid_df, test_df = train_test_split(temp_df, test_size=0.5, random_state=42)\n",
+    "del temp_df\n",
+    "valid_df_tr = valid_df.copy()\n",
+    "valid_df_te = valid_df.copy()\n",
+    "\n",
+    "del valid_df\n",
+    "\n",
+    "assignment = np.random.choice([1, 2], size=valid_df_tr.shape)\n",
+    "valid_df_tr *= (assignment == 1)\n",
+    "valid_df_te *= (assignment == 2)\n",
+    "valid_df_te.loc[:, :] = (valid_df_te > 0).astype(float)\n",
+    "valid_df_tr = valid_df_tr.astype(float)\n",
+    "\n",
+    "valid_df_tr.to_csv(\"/data/user_interactions_validation_tr.csv\")\n",
+    "valid_df_te.to_csv(\"/data/user_interactions_validation_te.csv\")\n",
+    "del valid_df_tr\n",
+    "del valid_df_te\n",
+    "test_df_tr = test_df.copy()\n",
+    "test_df_te = test_df.copy()\n",
+    "del test_df\n",
+    "assignment = np.random.choice([1, 2], size=test_df_tr.shape)\n",
+    "test_df_tr *= (assignment == 1)\n",
+    "test_df_te *= (assignment == 2)\n",
+    "test_df_te.loc[:, :] = (test_df_te > 0).astype(float)\n",
+    "test_df_tr = test_df_tr.astype(float)\n",
+    "\n",
+    "test_df_tr.to_csv(\"/data/user_interactions_test_tr.csv\")\n",
+    "test_df_te.to_csv(\"/data/user_interactions_test_te.csv\")"
    ]
   }
  ],
