--- a/implementation_temp.ipynb
+++ b/implementation_temp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,15 @@
     "import tqdm\n",
     "import time\n",
     "import datetime\n",
-    "from scipy import sparse"
+    "from scipy import sparse\n",
+    "\n",
+    "import polars as pl\n",
+    "from polars import col"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +79,7 @@
     "        self.target=target\n",
     "        self.user_mapper = user_mapper\n",
     "        if self.split == \"train\":\n",
-    "            self.train_data = pd.read_csv(root+'user_interactions_train.csv')\n",
+    "            self.train_data = pd.read_csv('/data/user_interactions_train.csv')\n",
     "        elif self.split == \"valid\":\n",
     "            self.vad_data_tr = pd.read_csv(root+'user_interactions_validation_tr.csv')\n",
     "            self.vad_data_te = pd.read_csv(root+'user_interactions_validation_te.csv')\n",
@@ -86,16 +89,7 @@
     "        else:\n",
     "            raise NotImplementedError\n",
     "        \n",
-    "        \n",
-    "        \n",
-    "\n",
-    "\n",
-    "        unique_sid = item_mapper['song_id'].unique()\n",
-    "\n",
-    "        n_items = len(unique_sid)\n",
-    "\n",
-    "\n",
-    "\n",
+    "    \n",
     "        if self.split == \"train\":\n",
     "            self.n_users = self.train_data.shape[0]\n",
     "        elif self.split == \"valid\":\n",
@@ -134,7 +128,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# using polars instead of pandas\n",
+    "class LFM1bDataset(data.Dataset):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        root,\n",
+    "        item_mapper,\n",
+    "        user_mapper,\n",
+    "        target=['country_encoded'],\n",
+    "        fold_in=True,\n",
+    "        split=\"train\",\n",
+    "        conditioned_on=None,\n",
+    "        upper=-1,\n",
+    "    ):\n",
+    "        super(LFM1bDataset, self).__init__()\n",
+    "        assert os.path.exists(root), \"root: {} not found.\".format(root)\n",
+    "        self.root = root\n",
+    "\n",
+    "        assert split in [\"test\", \"inference\", \"train\", \"valid\"]\n",
+    "        self.split = split\n",
+    "\n",
+    "        out_data_dir = root\n",
+    "        self.target = target\n",
+    "        self.user_mapper = user_mapper\n",
+    "\n",
+    "        if self.split == \"train\":\n",
+    "            self.train_data = pl.read_csv('/data/user_interactions_train.csv', dtypes={'user_id': pl.Int32})\n",
+    "        elif self.split == \"valid\":\n",
+    "            self.vad_data_tr = pl.read_csv(root + 'user_interactions_validation_tr.csv', dtypes={'user_id': pl.Int32})\n",
+    "            self.vad_data_te = pl.read_csv(root + 'user_interactions_validation_te.csv', dtypes={'user_id': pl.Int32})\n",
+    "        elif self.split == \"test\":\n",
+    "            self.test_data_tr = pl.read_csv(root + 'user_interactions_test_tr.csv', dtypes={'user_id': pl.Int32})\n",
+    "            self.test_data_te = pl.read_csv(root + 'user_interactions_test_te.csv', dtypes={'user_id': pl.Int32})\n",
+    "        else:\n",
+    "            raise NotImplementedError\n",
+    "\n",
+    "        if self.split == \"train\":\n",
+    "            self.n_users = self.train_data.shape[0]\n",
+    "        elif self.split == \"valid\":\n",
+    "            self.n_users = self.vad_data_tr.shape[0]\n",
+    "        elif self.split == \"test\":\n",
+    "            self.n_users = self.test_data_tr.shape[0]\n",
+    "        else:\n",
+    "            raise NotImplementedError\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return self.n_users\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        prof = np.zeros(1)\n",
+    "        if self.split == \"train\":\n",
+    "            data_tr = self.train_data.row(index, named=True)\n",
+    "            data_te = np.zeros(1)\n",
+    "            idx_user = data_tr.pop(\"user_id\")\n",
+    "            data_tr=np.fromiter(data_tr.values(),dtype='float32')\n",
+    "        elif self.split == \"valid\":\n",
+    "            data_tr = self.vad_data_tr.row(index, named=True)\n",
+    "            data_te = self.vad_data_te.row(index, named=True)\n",
+    "            data_te.pop(\"user_id\")\n",
+    "            idx_user = data_tr.pop(\"user_id\")\n",
+    "            data_tr=np.fromiter(data_tr.values(),dtype='float32')\n",
+    "            data_te=np.fromiter(data_te.values(),dtype='float32')\n",
+    "        elif self.split == \"test\":\n",
+    "            data_tr = self.test_data_tr.row(index, named=True)\n",
+    "            data_te = self.test_data_te.row(index, named=True)\n",
+    "            data_te.pop(\"user_id\")\n",
+    "            idx_user = data_tr.pop(\"user_id\")\n",
+    "            data_tr=np.fromiter(data_tr.values(),dtype='float32')\n",
+    "            data_te=np.fromiter(data_te.values(),dtype='float32')\n",
+    "\n",
+    "        sensitive = self.user_mapper.loc[self.user_mapper.user_id == idx_user][\n",
+    "            self.target\n",
+    "        ].to_numpy()[0]\n",
+    "\n",
+    "        return data_tr, data_te, prof, idx_user, sensitive\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,74 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class SENSITIVE_ATTR_VAE(nn.Module):\n",
-    "\n",
-    "    def __init__(self, input_dim=200, n_sensitive_attributes=1, hidden_dim=100, latent_dim=50):\n",
-    "        super(SENSITIVE_ATTR_VAE, self).__init__()\n",
-    "        self.device=torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "        # encoder\n",
-    "        self.encoder = nn.Sequential(\n",
-    "            nn.Linear(input_dim, hidden_dim),\n",
-    "            nn.LeakyReLU(0.2),\n",
-    "            nn.Linear(hidden_dim, latent_dim),\n",
-    "            nn.LeakyReLU(0.2)\n",
-    "            )\n",
-    "        \n",
-    "        # latent mean and variance \n",
-    "        self.mean_layer = nn.Linear(latent_dim, 2)\n",
-    "        self.logvar_layer = nn.Linear(latent_dim, 2)\n",
-    "        \n",
-    "        # decoder\n",
-    "        self.decoder = nn.Sequential(\n",
-    "            nn.Linear(2, latent_dim),\n",
-    "            nn.LeakyReLU(0.2),\n",
-    "            nn.Linear(latent_dim, hidden_dim),\n",
-    "            nn.LeakyReLU(0.2),\n",
-    "            nn.Linear(hidden_dim, n_sensitive_attributes),\n",
-    "            nn.ReLU()\n",
-    "            )\n",
-    "     \n",
-    "    def encode(self, x):\n",
-    "        x = self.encoder(x)\n",
-    "        mean, logvar = self.mean_layer(x), self.logvar_layer(x)\n",
-    "        return mean, logvar\n",
-    "\n",
-    "    def reparameterization(self, mean, var):\n",
-    "        epsilon = torch.randn_like(var).to(self.device)      \n",
-    "        z = mean + var*epsilon\n",
-    "        return z\n",
-    "\n",
-    "    def decode(self, x):\n",
-    "        return self.decoder(x)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        mean, logvar = self.encode(x)\n",
-    "        z = self.reparameterization(mean, logvar)\n",
-    "        x_hat = self.decode(z)\n",
-    "        return x_hat, mean, logvar\n",
-    "\n",
-    "class RMSLELoss(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "        self.mse = nn.MSELoss(reduction='mean')\n",
-    "        \n",
-    "    def forward(self, pred, actual):\n",
-    "        return torch.sqrt(self.mse(torch.log(pred + 1), torch.log(actual + 1)))\n",
-    "    \n",
-    "def loss_function(x, x_hat, mean, log_var):\n",
-    "    reproduction_loss = RMSLELoss()\n",
-    "    KLD = - 0.5 * torch.sum(1+ log_var - mean.pow(2) - log_var.exp())\n",
-    "\n",
-    "    return reproduction_loss(x_hat,x) + KLD"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +335,7 @@
     "DS = LFM1bDataset\n",
     "dt = DS(\"./Data/\", item_mapper, user_mapper, target=[\"country_encoded\"], split=\"train\")\n",
     "train_loader = torch.utils.data.DataLoader(\n",
-    "    dt, batch_size=500, shuffle=False, num_workers=1\n",
+    "    dt, batch_size=500, shuffle=False,\n",
     ")"
    ]
   },
@@ -336,7 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dt = DS(\n",
+    "dv = DS(\n",
     "    \"./Data/\",\n",
     "    item_mapper,\n",
     "    user_mapper,\n",
@@ -344,13 +353,13 @@
     "    split=\"valid\",\n",
     ")\n",
     "valid_loader = torch.utils.data.DataLoader(\n",
-    "    dt, batch_size=100, shuffle=False, num_workers=1\n",
+    "    dv, batch_size=200, shuffle=False, num_workers=1\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +586,7 @@
     "            self.ubias.append(avg_ubias)\n",
     "\n",
     "            np.save(\n",
-    "                \"results/\"\n",
+    "                \"/data/results/\"\n",
     "                + self.dataset_name\n",
     "                + \"_ndcg_{}_{}_{}_{}.npy\".format(\n",
     "                    self.target, self.beta, self.gamma, self.tau\n",
@@ -585,7 +594,7 @@
     "                self.ndcg,\n",
     "            )\n",
     "            np.save(\n",
-    "                \"results/\"\n",
+    "                \"/data/results/\"\n",
     "                + self.dataset_name\n",
     "                + \"_recall_{}_{}_{}_{}.npy\".format(\n",
     "                    self.target, self.beta, self.gamma, self.tau\n",
@@ -593,7 +602,7 @@
     "                self.recall,\n",
     "            )\n",
     "            np.save(\n",
-    "                \"results/\"\n",
+    "                \"/data/results/\"\n",
     "                + self.dataset_name\n",
     "                + \"_loss_{}_{}_{}_{}.npy\".format(\n",
     "                    self.target, self.beta, self.gamma, self.tau\n",
@@ -601,7 +610,7 @@
     "                self.loss,\n",
     "            )\n",
     "            np.save(\n",
-    "                \"results/\"\n",
+    "                \"/data/results/\"\n",
     "                + self.dataset_name\n",
     "                + \"_neg_{}_{}_{}_{}.npy\".format(\n",
     "                    self.target, self.beta, self.gamma, self.tau\n",
@@ -609,7 +618,7 @@
     "                self.neg,\n",
     "            )\n",
     "            np.save(\n",
-    "                \"results/\"\n",
+    "                \"/data/results/\"\n",
     "                + self.dataset_name\n",
     "                + \"_kl_{}_{}_{}_{}.npy\".format(\n",
     "                    self.target, self.beta, self.gamma, self.tau\n",
@@ -617,7 +626,7 @@
     "                self.kl,\n",
     "            )\n",
     "            np.save(\n",
-    "                \"results/\"\n",
+    "                \"/data/results/\"\n",
     "                + self.dataset_name\n",
     "                + \"_ubias_{}_{}_{}_{}.npy\".format(\n",
     "                    self.target, self.beta, self.gamma, self.tau\n",
@@ -671,7 +680,7 @@
     "                how=\"inner\",\n",
     "            )\n",
     "            final_results.to_csv(\n",
-    "                \"results/{}_final_results_{}_{}_{}_{}.csv\".format(\n",
+    "                \"/data/results/{}_final_results_{}_{}_{}_{}.csv\".format(\n",
     "                    self.dataset_name, self.target, self.beta, self.gamma, self.tau\n",
     "                ),\n",
     "                index=False,\n",
@@ -702,7 +711,6 @@
     "                data_tr = data_tr.cuda()\n",
     "                prof = prof.cuda()\n",
     "                sens = sens.cuda()  # added by me\n",
-    "\n",
     "            data_tr = Variable(data_tr)\n",
     "            prof = Variable(prof)\n",
     "            data_time.update(time.time() - end)\n",
@@ -711,7 +719,6 @@
     "            logits, KL, mu_q, std_q, epsilon, sampled_z = self.model.forward(\n",
     "                data_tr, prof\n",
     "            )\n",
-    "\n",
     "            log_softmax_var = f.log_softmax(logits, dim=1)\n",
     "            neg_ll = -torch.mean(torch.sum(log_softmax_var * data_tr, dim=1))\n",
     "\n",
@@ -745,7 +752,6 @@
     "                - self.gamma * class_loss\n",
     "                + self.tau * user_bias\n",
     "            )\n",
-    "\n",
     "            # backprop\n",
     "            self.model.zero_grad()\n",
     "            loss.backward()\n",
@@ -771,52 +777,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.backends.cudnn.version: 8902\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "cuda = torch.cuda.is_available()\n",
     "if cuda:\n",
     "    print(\"torch.backends.cudnn.version: {}\".format(torch.backends.cudnn.version()))\n",
     "\n",
-    "if not os.path.isdir(\"./checkpoint\"):\n",
-    "    os.mkdir(\"./checkpoint\")\n",
-    "if not os.path.isdir(\"./results\"):\n",
-    "    os.mkdir(\"./results\")"
+    "if not os.path.isdir(\"/data/checkpoint\"):\n",
+    "    os.mkdir(\"/data/checkpoint\")\n",
+    "if not os.path.isdir(\"/data/results\"):\n",
+    "    os.mkdir(\"/data/results\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cuda"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -868,21 +855,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'optim' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/mduzah/Thesis_work/thesis/implementation_temp.ipynb Cell 14\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Buzairahmd.rd.tuni.fi/home/mduzah/Thesis_work/thesis/implementation_temp.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# lr_policy: step\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Buzairahmd.rd.tuni.fi/home/mduzah/Thesis_work/thesis/implementation_temp.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m last_epoch \u001b[39m=\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Buzairahmd.rd.tuni.fi/home/mduzah/Thesis_work/thesis/implementation_temp.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m lr_scheduler \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39moptim\u001b[39m.\u001b[39mlr_scheduler\u001b[39m.\u001b[39mMultiStepLR(\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Buzairahmd.rd.tuni.fi/home/mduzah/Thesis_work/thesis/implementation_temp.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m     optim, milestones\u001b[39m=\u001b[39m[\u001b[39m50\u001b[39m, \u001b[39m75\u001b[39m], gamma\u001b[39m=\u001b[39mcfg[\u001b[39m\"\u001b[39m\u001b[39mgamma\u001b[39m\u001b[39m\"\u001b[39m], last_epoch\u001b[39m=\u001b[39mlast_epoch\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Buzairahmd.rd.tuni.fi/home/mduzah/Thesis_work/thesis/implementation_temp.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m )\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'optim' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# lr_policy: step\n",
     "last_epoch = -1\n",
@@ -911,7 +886,7 @@
     "    start_step=0,\n",
     "    total_steps=int(3e5),\n",
     "    interval_validate=None,\n",
-    "    checkpoint_dir=\"./checkpoint/\",\n",
+    "    checkpoint_dir=\"/data/checkpoint/\",\n",
     "    print_freq=1,\n",
     "    checkpoint_freq=1,\n",
     "    total_anneal_steps=2000,\n",
@@ -921,14 +896,13 @@
     "    dataset_name=\"lfm2b\",\n",
     "    # alpha=0.5,\n",
     "    base_dir=\"./Data/\",\n",
-    "    target=[\"country_encoded\"],\n",
-    ")\n",
+    "    target=[\"country_encoded\"],)\n",
     "trainer.train()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,17 +979,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "trainer = Trainer(\n",
     "    cmd=\"test\",\n",
